# RelationalSchemaMatching

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  dev.Dockerfile  gunicorn.Dockerfile  gunicorn.conf.py  product.Dockerfile  pyproject.toml
.gitlab/: CODEOWNERS  secret-detection-rulset.toml
.gitlab/ci/: build-and-push-app.gitlab-ci.yml  container-test.gitlab-ci.yml  deploy.gitlab-ci.yml  lint.gitlab-ci.yml  mkdocs.gitlab-ci.yml  secret-detection.gitlab-ci.yml  test.gitlab-ci.yml
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature.md  Hotfix.md  Refactoring.md
.gitlab/triage/: assignee.rb
app/: config.py  constants.py  handlers.py  log.py  main.py  models.py
app/api/: api_router.py
app/api/examples/: items.py
app/api/routers/: correlations.py  items.py  users.py
app/docs/: items.py
app/exceptions/: service.py
app/internal/: admin.py
app/routers/: items.py  users.py
app/schemas/: correlations.py  items.py  response.py  users.py
app/src/correlations/: data_preprocessor.py  endpoints.py  enums.py  matching.py  model.py  relation_features.py  self_features.py  util.py
app/src/exception/: service.py
app/src/items/: items.py
app/src/users/: users.py
docs/: Dockerfile  mkdocs.yml
docs/docs/: index.md
docs/docs/api/: docs.html
docs/docs/guide/: automation-bot.md  ci-cd.md  gunicorn.md  mkdocs.md  msa.md  pre-commit.md  project-structure.md
docs/docs/start/: getting-started.md  quick-start.md  quickstart.md
test_data/citations/: truth.json
test_data/datasets-citations/: Table2.csv  source.txt  truth.json
test_data/movies1/: truth.json
test_data/movies2/: Table1.csv  Table2.csv  labeled_data.csv  truth.json
test_data/movies3/: Table2.csv  labeled_data.csv  truth.json
test_data/restaurants3/: Table1.csv  labeled_data.csv  truth.json
test_data/restaurants4/: Table1.csv  Table2.csv  labeled_data.csv  truth.json
tests/: check_common_conditions.py  conftest.py  test_main.py
tests/api/: test_items.py  test_users.py
tests/api/routers/: test_items.py  test_users.py
tests/internal/: test_admin.py
tests/routers/: test_items.py
tests/schemas/: test_items.py
