[build-system]
requires = [
    "pip >= 23.1",
    "setuptools >= 67.6.1",
    "wheel >= 0.40.0",
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "python-fastapi-template"
version = "v1"
authors = [
    "Seoyeon Park <sally9476@wisenut.co.kr>"
]
maintainers = [
    "Chanhyeong Lee <wisnt65@wisenut.co.kr>",
    "Seoyeon Park <sally9476@wisenut.co.kr>",
]
description = "Python FastAPI Template"
readme = "README.md"
keywords = ["python", "fastapi", "template", "pytest", "ruff", "pyright", "docker", "gunicorn", "poetry"]
license = "LICENSE"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pytest",
    "Natural Language :: Korean",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers"
]
exclude = [".gitlab-ci.yml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = {extras = ["standard"], version = "^0.114.1"}
loguru = "^0.7.2"
pyyaml = "^6.0.2"
pydantic-settings = "^2.5.2"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.4"
pyright = "^1.1.380"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.gunicorn.dependencies]
gunicorn = "^23.0.0"

[tool.setuptools]
py-modules = ["app"]


[tool.ruff]
line-length = 125
exclude = [
    '.git',
    '__pycache__',
    '.mypy_cache',
    '.ruff_cache',
    'docs',
    'venv',
    'tests',
    'build',
    'dist',
    './app/__init__.py',
    'gunicorn.conf.py'
]
target-version = "py39"
[tool.ruff.lint]
ignore = ['W']
[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.pyright]
pythonVersion = "3.9"
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
reportArgumentType = false
typeCheckingMode = "basic"
include = ["app"]
exclude = [
    '.git',
    '__pycache__',
    '.mypy_cache',
    '.ruff_cache',
    '.pytest_cache',
    'docs',
    'venv',
    'tests',
    'build',
    'dist',
    'pypi',
    'logs',
    'gunicorn.conf.py'
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/*.py",
     "*/__init__.py",
    "app/api/examples/*.py",
    "app/exceptions/*.py",
]